c4prj2_input/grade.txt
Grading at Tue Mar  9 09:10:57 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:12:32: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
   fc->decks[fc->n_decks].cards = ptr;
                                ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
